merge up to r825291
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/flex_1458@825328 13f79535-47bb-0310-9956-ffa450edef68